test/analyze/type_check/binary_operation/numeric.exp
Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/numeric.myte:13:7-11
 13 |   (1 - true: Int);
    |        ^^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/numeric.myte:14:3-7
 14 |   (true - 1: Int);
    |    ^^^^

Error: Expected types `Int` or `Double` but found `Bool`
test/analyze/type_check/binary_operation/numeric.myte:15:3-7
 15 |   (true - (): Int);
    |    ^^^^

Error: Expected types `Int` or `Double` but found `Unit`
test/analyze/type_check/binary_operation/numeric.myte:15:10-12
 15 |   (true - (): Int);
    |           ^^

Error: Expected type `Double` but found `Bool`
test/analyze/type_check/binary_operation/numeric.myte:16:9-13
 16 |   (1.0 - true: Double);
    |          ^^^^

Error: Expected type `Int` but found `Double`
test/analyze/type_check/binary_operation/numeric.myte:17:3-6
 17 |   (1.0 % 2.0: Double);
    |    ^^^

Error: Expected type `Int` but found `Double`
test/analyze/type_check/binary_operation/numeric.myte:17:9-12
 17 |   (1.0 % 2.0: Double);
    |          ^^^